--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,21 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
+      - name: Install igraph dependencies
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y cmake libxml2-dev
       - name: Install dependencies
         run: bundle install --jobs 4 --retry 3
+      - name: Build igraph from source
+        run: |
+          git clone https://github.com/igraph/igraph.git
+          cd igraph
+          mkdir build && cd build
+          cmake ..
+          cmake --build .
+          sudo cmake --install .
+          pwd
       - name: Run tests
         run: bundle exec rake test
 
