--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,18 @@ jobs:
           cmake ..
           make
           sudo make install
+      - name: List installed igraph
+        run: |
+          find /usr/local -name "libigraph*"
+
+      - name: Update linker cache
+        run: |
+          sudo ldconfig
+
+      - name: Set LD_LIBRARY_PATH
+        run: |
+          echo "LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
+
       - name: Run tests
         run: bundle exec rake test
 
