--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           mkdir build && cd build
           cmake -DBUILD_SHARED_LIBS=ON ..
           cmake --build .
-          cmake --install .
+          sudo cmake --install .
       - name: Run tests
         run: bundle exec rake test
 
